# SLML

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: lx-build-and-pytest.yml  macos-build-and-pytest.yml  win-build-and-pytest.yml
src/: SML.py
src/SLML/: Benchmarks.py  Dataset.py  Models.py  SLML.py  __init__.py  _common.py  _metrics.py  _modelFactory.py  _visualize.py
src/SML/: SML.py  __init__.py
tests/: test_slml.py  test_sml.py
tests/models_db/: Exp_LS_.dir  Exp_RBF_.dir  Exp_kriging_.dir  RBF_RB_model.pkl  RBF_RB_predicted.pkl  RBF_RB_training.pkl
