[metadata]
name = SLML
version = 2.0.0
description = "Statistical Learning Models library"
author = Ahmed H. Bayoumy
author_email = ahmed.bayoumy@mail.mcgill.ca
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/Ahmed-Bayoumy/SLML
project_urls =
    Bug Tracker = https://github.com/Ahmed-Bayoumy/SLML/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
SLML = py.typed

[flake8]
max-line-length = 160